Updating about.html

--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p></p>
+<p>Based out of Silver Spring, MD, I am a part-time student in Flatiron School's Full Stack Web Development program. </p>
